--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myExpenses",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "danielbrutti",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -19,13 +19,12 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "@awesome-cordova-plugins/google-plus": "^5.39.0",
-    "@capacitor/android": "3.4.1",
+    "@capacitor/android": "3.4.2",
     "@capacitor/app": "^1.1.0",
-    "@capacitor/core": "3.4.0",
+    "@capacitor/core": "3.4.2",
     "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.1",
-    "@capacitor/status-bar": "1.0.7",
+    "@capacitor/keyboard": "1.2.2",
+    "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
     "capacitor-native-biometric": "^3.0.3",
     "lottie-web": "^5.8.1",
@@ -44,7 +43,7 @@
     "@angular/compiler": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0",
     "@angular/language-service": "~13.0.0",
-    "@capacitor/cli": "3.4.0",
+    "@capacitor/cli": "3.4.2",
     "@ionic/angular-toolkit": "^5.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -67,5 +66,5 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.4.4"
   },
-  "description": "An Ionic project"
+  "description": "An Expenses Wallet"
 }
